tdf#94570: document statistic of none odf files fixed

The fix allows first time calculation of the document statistic.

Change-Id: I54d2f208fa75e6c3502c27678b85a9995d4daec5
Reviewed-on: https://gerrit.libreoffice.org/23589
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Oliver Specht <oliver.specht@cib.de>